--- a/container/autologin.conf
+++ b/container/autologin.conf
@@ -5,4 +5,5 @@
 # The '-o' option value tells agetty to replace 'login' arguments with an option to preserve environment (-p),
 # followed by '--' for safety, and then the entered username.
 ExecStart=
-ExecStart=-/sbin/agetty -o '-p -- \\u' --noclear --keep-baud --autologin root - 115200,38400,9600 $TERM
+ExecStart=-/sbin/agetty -o '-p -- \\u' --noclear --keep-baud --autologin duskadmin - 115200,38400,9600 $TERM
+#ExecStart=-/sbin/agetty -o '-p -- \\u' --noclear --keep-baud --autologin root - 115200,38400,9600 $TERM
