--- a/duskies/caddy/docker-compose.yml
+++ b/duskies/caddy/docker-compose.yml
@@ -1,10 +1,8 @@
 ---
-version: '3.8'
-
 services:
 
   # Caddy acts as our external-facing webserver and handles
-  # getting TLS certs from LetsEncrypt.
+  # obtaining and maintaining  TLS certs from LetsEncrypt.
   caddy:
     image: docker.io/library/caddy:2.9-alpine
     container_name: caddy
@@ -21,6 +19,7 @@ services:
       - ./data:/data
       - ./config:/config
 
+
   duskies-api:
     image: localhost/duskies-api:latest
     container_name: duskies-api
@@ -29,15 +28,6 @@ services:
       - caddy_net
     ports:
       - 8002:8000
-
-  duskies-client:
-    image: localhost/duskies-client:latest
-    container_name: duskies-client
-    restart: unless-stopped
-    networks:
-      - caddy_net
-    ports:
-      - 8001:5173
 
 networks:
   caddy_net:
