--- a/duskies/caddy/docker-compose.yml
+++ b/duskies/caddy/docker-compose.yml
@@ -1,4 +1,11 @@
 ---
+
+#networks:
+#  caddy_net:
+#    name: caddy_net
+#    driver: bridge
+##    enable_ipv6: true
+    
 services:
 
   # Caddy acts as our external-facing webserver and handles
@@ -7,8 +14,8 @@ services:
     image: docker.io/library/caddy:2.9-alpine
     container_name: caddy
     restart: unless-stopped
-    networks:
-      - caddy_net
+#    networks:
+#      - caddy_net
     ports:
       - 80:80
       - 443:443
@@ -19,19 +26,28 @@ services:
       - ./data:/data
       - ./config:/config
 
-
   duskies-api:
     image: localhost/duskies-api:latest
     container_name: duskies-api
     restart: unless-stopped
-    networks:
-      - caddy_net
-    ports:
-      - 8002:8000
+    expose:
+      - "8000"
 
-networks:
-  caddy_net:
-    name: caddy_net
-    driver: bridge
-    enable_ipv6: true
-    
+##    networks:
+##      - caddy_net
+##    ports:
+##      - 8000:8000
+
+  duskies-client:
+    image: localhost/duskies-client:latest
+    container_name: duskies-client
+    restart: unless-stopped
+    expose:
+      - "5173"
+    volumes:
+      - ../dusk05.alley.network/public/src:/app/client/my-app/src:z
+
+#    networks:
+#      - caddy_net
+#    ports:
+#      - 8001:5173
