--- a/duskies/caddy/docker-compose.yml
+++ b/duskies/caddy/docker-compose.yml
@@ -32,6 +32,9 @@ services:
     restart: unless-stopped
     expose:
       - "8000"
+    volumes:
+      # volume only needed for cauvicorn --reload during dev
+      - ../dusk05.alley.network/src/api:/app/api:z
 
 ##    networks:
 ##      - caddy_net
